TP-2537: fixed tablet button alignments in the header and hero

--- a/drupal/sites/all/themes/pivot/sass/_bxslider.scss
+++ b/drupal/sites/all/themes/pivot/sass/_bxslider.scss
@@ -31,7 +31,6 @@
 .bx-wrapper img {
   max-width: 100%;
   display: block;
-  padding: 0 20px;
   @media (max-width: 767px) {
     padding: 0;
   }
